# instagram-automation-dashboard

./: .dockerignore  .env.agent.example  .env.development  .env.example  .env.production  .gitignore  .mcp-config.json  COMPLIANCE_CHANGES_SUMMARY.md  DOCKER_QUICK_START.md  DOMAIN_PRESERVATION_LAW.md  Dockerfile  FIX-SUMMARY.md  HETZNER_DEPLOYMENT.md  PHASE1_development-contract.md  PHASE3E_PASS5_VALIDATION.md  PHASE_2_COMPLETION_SUMMARY.md  README.docker.md  RUNTIME_SURFACE_AUDIT.md  RUST-TAuri-migration.md  SPEC-config-substrate-ipc.md  WEBHOOK_SETUP.md  WORK-LOG.md  cloudfare-config.yml  context-injection.md  deploy-tunnel-b.sh  deploy.sh  docker-compose.dev.yml  docker-compose.unified.yml  docker-compose.yml  ecosystem.config.js  index.html  nginx-host.conf  nginx.conf  oauth-diagnostic-test.html  package-lock.json  package.json  playwright.config.ts  render.yaml  start_ngrok.js  supabase-tunnel.yml  (+16 more)
runtime/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
runtime/src-tauri/capabilities/: default.json
runtime/src-tauri/icons/: .gitkeep
runtime/src-tauri/ipc/: runtime.ts  session.ts  window.ts
runtime/src-tauri/ipc/__tests__/: types.test-d.ts
runtime/src-tauri/lib/content/: legal.ts
runtime/src-tauri/lib/controllers/: index.ts
runtime/src-tauri/lib/fsm/: index.ts
runtime/src-tauri/lib/ipc/: commands.ts  errors.ts  index.ts  types.ts
runtime/src-tauri/permissions/kernel/: default.toml
runtime/src-tauri/scripts/: make_placeholder_icon.py
runtime/src-tauri/src/: lib.rs  main.rs
runtime/src-tauri/tests/: .gitkeep  integration_redis_roundtrip.rs
(+529 files in other folders)
