[package]
name = "automation-kernel"
version = "0.1.0"
description = "Runtime kernel for the systemic refactor program"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "automation_kernel"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "automation-kernel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
